# costmodels

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  README.md  pyproject.toml
examples/: README.md  adding_models.ipynb  costmodels_usage.py  custom.ipynb  custom_model.py  ex0.py  finance_use_case.py  icostmodel.py  optimization.ipynb  optimization.py  project_interface.py  topfarm_integration.py  usage.ipynb  usecase.py  withproject.py
src/costmodels/: __init__.py  _interface.py  api.py  api_autograd.py  base.py  battery_cost.py  cmodel.py  constants.py  dtu_offshore.py  eprice_aware.py  finance.py  gradmodel.py  helpers.py  interface.py  minimalistic.py  nrel.py  nrel_csm_mass_2015.py  p2h2_cost.py  project.py  pv.py  pv_jax.py  shared_cost.py  ufloat.py  units.py  ureg.py  utils.py
src/costmodels/models/: __init__.py  battery_cost.py  dtu_offshore.py  minimalistic.py  nrel.py  p2h2_cost.py  pv.py  shared_cost.py  variable_opex.py
tests/: DTU_CostModel.py  test_api.py  test_battery_cost.py  test_dtu_offshore.py  test_examples.py  test_finance.py  test_integration.py  test_interface.py  test_minimalistic.py  test_nrel.py  test_p2h2_cost.py  test_project.py  test_pv.py  test_shared_cost.py  test_variable_opex.py  test_win_single_case.py  winutil.py
tests/data/: WTcostmodel_v12.xlsx  finance_inputs_p2x.csv  variable_opex_model.xlsx
tests/utils/: dtuoffshore_rewrite_verify.py  winutil.py
