[project]
authors = [{ name = "ernie", email = "ernim@dtu.dk" }]
dependencies = [
    # TODO: list for packaging later
]
description = "Add a short description here"
name = "costmodels"
requires-python = ">= 3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-report=term-missing:skip-covered --cov-report=html --cov=src/costmodels --dist=worksteal"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
costmodels = { path = ".", editable = true }
# hydesign = { path = "../hydesign", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.9"
numpy = ">=2.2.2,<3"
pydantic = ">=2.10.6,<3"
scipy = ">=1.15.1,<2"
openmdao = ">=3.36.0,<4"
numpy-financial = ">=1.0.0,<2"
pint = ">=0.24.4,<0.25"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"
pytest-xdist = ">=3.6.1,<4"

[tool.pixi.environments]
test = { features = ["test"] }
