[project]
authors = [{ name = "ernie", email = "ernim@dtu.dk" }]
description = "Add a short description here"
name = "costmodels"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "numpy>=2.2.2,<3",
    "pydantic>=2.10.6,<3",
    "scipy>=1.15.1,<2",
    "openmdao>=3.36.0,<4",
    "numpy-financial>=1.0.0,<2",
    "pint>=0.24.4,<0.25",
    "matplotlib>=3.10.0,<4",
    "pydantic-pint @ git+https://github.com/tylerh111/pydantic-pint.git@main"
    # "jax>=0.5.1,<0.6"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-xdist>=3.6.1,<4",
    "pre-commit>=4.1.0,<5",
    "xlwings>=0.33.9,<0.34"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/assets"]
addopts = "--dist=worksteal"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
costmodels = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.9,<3.13"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"
pytest-xdist = ">=3.6.1,<4"
pre-commit = ">=4.1.0,<5"
pip = ">=25.0.1,<26"
xlwings = ">=0.33.9,<0.34"
mypy = ">=1.15.0,<2"

[tool.pixi.feature.test.tasks]
pytest = "pytest --cov-report=term-missing:skip-covered --cov-report=html --cov=src/costmodels"

# [tool.pixi.feature.examples.dependencies]
# topfarm = ">=2.5.0,<3"

[tool.pixi.environments]
test = { features = ["test"] }
# examples = { features = ["examples"] }
